blocking out EDA and functions

--- a/FinalEDA.ipynb
+++ b/FinalEDA.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mDEPRECATION: Python 2.7 reached the end of its life on January 1st, 2020. Please upgrade your Python as Python 2.7 is no longer maintained. A future version of pip will drop support for Python 2.7. More details about Python 2 support in pip, can be found at https://pip.pypa.io/en/latest/development/release-process/#python-2-support\u001b[0m\n",
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Requirement already satisfied: biopython in /Users/Grant/Library/Python/2.7/lib/python/site-packages (1.76)\n",
-      "Requirement already satisfied: numpy in /Users/Grant/Library/Python/2.7/lib/python/site-packages (from biopython) (1.16.6)\n"
+      "Collecting biopython\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/76/32/2fd3b24f1fcf47e5e1b8d533262a5118568afd877f48080dd809262f9fa3/biopython-1.77-cp37-cp37m-macosx_10_9_x86_64.whl (2.3MB)\n",
+      "\u001b[K     |████████████████████████████████| 2.3MB 2.0MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy in /Users/ayon/opt/anaconda3/lib/python3.7/site-packages (from biopython) (1.17.2)\n",
+      "Installing collected packages: biopython\n",
+      "Successfully installed biopython-1.77\n"
      ]
     }
    ],
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './ncbi_dataset/data/genomic.fna'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-b83122190d5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgenomes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFastaReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./ncbi_dataset/data/genomic.fna'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mproteins\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFastaReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./ncbi_dataset/data/protein.faa'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-056f82e39576>\u001b[0m in \u001b[0;36mFastaReader\u001b[0;34m(fastafile)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mFastaReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfastafile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mBio\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSeqIO\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfastafile\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfasta_file\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# Will close handle cleanly\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0midentifiers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mlengths\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './ncbi_dataset/data/genomic.fna'"
+     ]
+    }
+   ],
    "source": [
     "genomes = FastaReader('./ncbi_dataset/data/genomic.fna')\n",
     "proteins = FastaReader('./ncbi_dataset/data/protein.faa')"
@@ -55,236 +70,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>Sequence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>AC_000192.1</td>\n",
-       "      <td>(T, A, T, A, A, G, A, G, T, G, A, T, T, G, G, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>AF095702.1</td>\n",
-       "      <td>(A, T, G, T, T, G, G, T, G, A, A, G, T, C, A, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>AF220295.1</td>\n",
-       "      <td>(G, A, T, T, G, T, G, A, G, C, G, A, T, T, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>AF353511.1</td>\n",
-       "      <td>(A, C, T, T, A, A, A, A, A, G, A, T, T, T, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>AF391541.1</td>\n",
-       "      <td>(G, A, T, T, G, C, G, A, G, C, G, A, T, T, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12482</td>\n",
-       "      <td>MT831673.1</td>\n",
-       "      <td>(T, A, A, A, G, G, T, T, T, A, T, A, C, C, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12483</td>\n",
-       "      <td>MT831674.1</td>\n",
-       "      <td>(T, A, A, A, G, G, T, T, T, A, T, A, C, C, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12484</td>\n",
-       "      <td>MT831675.1</td>\n",
-       "      <td>(T, T, A, A, A, G, G, T, T, T, A, T, A, C, C, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12485</td>\n",
-       "      <td>MT831676.1</td>\n",
-       "      <td>(T, A, T, A, C, C, T, T, C, C, C, A, G, G, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>12486</td>\n",
-       "      <td>MT831677.1</td>\n",
-       "      <td>(T, A, T, A, C, C, T, T, C, C, C, A, G, G, T, ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12487 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 0                                           Sequence\n",
-       "0      AC_000192.1  (T, A, T, A, A, G, A, G, T, G, A, T, T, G, G, ...\n",
-       "1       AF095702.1  (A, T, G, T, T, G, G, T, G, A, A, G, T, C, A, ...\n",
-       "2       AF220295.1  (G, A, T, T, G, T, G, A, G, C, G, A, T, T, T, ...\n",
-       "3       AF353511.1  (A, C, T, T, A, A, A, A, A, G, A, T, T, T, T, ...\n",
-       "4       AF391541.1  (G, A, T, T, G, C, G, A, G, C, G, A, T, T, T, ...\n",
-       "...            ...                                                ...\n",
-       "12482   MT831673.1  (T, A, A, A, G, G, T, T, T, A, T, A, C, C, T, ...\n",
-       "12483   MT831674.1  (T, A, A, A, G, G, T, T, T, A, T, A, C, C, T, ...\n",
-       "12484   MT831675.1  (T, T, A, A, A, G, G, T, T, T, A, T, A, C, C, ...\n",
-       "12485   MT831676.1  (T, A, T, A, C, C, T, T, C, C, C, A, G, G, T, ...\n",
-       "12486   MT831677.1  (T, A, T, A, C, C, T, T, C, C, C, A, G, G, T, ...\n",
-       "\n",
-       "[12487 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "genomes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>Sequence</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>AAA42914.1:1-84</td>\n",
-       "      <td>(M, F, M, A, D, A, Y, F, A, D, T, V, W, Y, V, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>AAA66393.1:1-18</td>\n",
-       "      <td>(M, F, L, L, L, R, F, V, L, V, S, C, I, I, G, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>AAA66393.1:1-424</td>\n",
-       "      <td>(M, F, L, L, L, R, F, V, L, V, S, C, I, I, G, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>AAA66393.1:19-424</td>\n",
-       "      <td>(F, D, N, P, P, T, N, V, V, S, H, L, N, G, D, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>AAA66397.1:1-448</td>\n",
-       "      <td>(M, S, F, T, P, G, K, Q, S, S, S, R, A, S, F, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>366794</td>\n",
-       "      <td>QMT55033.1:1-121</td>\n",
-       "      <td>(M, K, I, I, L, F, L, A, L, I, T, L, A, T, C, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>366795</td>\n",
-       "      <td>QMT55034.1:1-43</td>\n",
-       "      <td>(M, I, E, L, S, L, I, D, F, Y, L, C, F, L, A, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>366796</td>\n",
-       "      <td>QMT55035.1:1-121</td>\n",
-       "      <td>(M, K, F, L, V, F, L, G, I, I, T, T, V, A, A, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>366797</td>\n",
-       "      <td>QMT55036.1:1-419</td>\n",
-       "      <td>(M, S, D, N, G, P, Q, N, Q, R, N, A, P, R, I, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>366798</td>\n",
-       "      <td>QMT55037.1:1-38</td>\n",
-       "      <td>(M, G, Y, I, N, V, F, A, F, P, F, T, I, Y, S, ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>366799 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        0                                           Sequence\n",
-       "0         AAA42914.1:1-84  (M, F, M, A, D, A, Y, F, A, D, T, V, W, Y, V, ...\n",
-       "1         AAA66393.1:1-18  (M, F, L, L, L, R, F, V, L, V, S, C, I, I, G, ...\n",
-       "2        AAA66393.1:1-424  (M, F, L, L, L, R, F, V, L, V, S, C, I, I, G, ...\n",
-       "3       AAA66393.1:19-424  (F, D, N, P, P, T, N, V, V, S, H, L, N, G, D, ...\n",
-       "4        AAA66397.1:1-448  (M, S, F, T, P, G, K, Q, S, S, S, R, A, S, F, ...\n",
-       "...                   ...                                                ...\n",
-       "366794   QMT55033.1:1-121  (M, K, I, I, L, F, L, A, L, I, T, L, A, T, C, ...\n",
-       "366795    QMT55034.1:1-43  (M, I, E, L, S, L, I, D, F, Y, L, C, F, L, A, ...\n",
-       "366796   QMT55035.1:1-121  (M, K, F, L, V, F, L, G, I, I, T, T, V, A, A, ...\n",
-       "366797   QMT55036.1:1-419  (M, S, D, N, G, P, Q, N, Q, R, N, A, P, R, I, ...\n",
-       "366798    QMT55037.1:1-38  (M, G, Y, I, N, V, F, A, F, P, F, T, I, Y, S, ...\n",
-       "\n",
-       "[366799 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "proteins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1) Try numpy conversion"
    ]
   },
   {
@@ -293,6 +99,43 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2) Create aligner function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def align():"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3) Align viruses to WHO-01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4) "
+   ]
   }
  ],
  "metadata": {
