--- a/FinalEDA.ipynb
+++ b/FinalEDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -56,13 +56,14 @@
     "genomes = FastaReader('./ncbi_dataset/data/genomic.fna')\n",
     "genomes.index = genomes[0]\n",
     "genomes.drop(columns = 0, inplace = True)\n",
+    "#genomes.to_csv('./genomes.csv')\n",
     "#We may not be using proteins\n",
     "#proteins = FastaReader('./ncbi_dataset/data/protein.faa')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,119 +87,45 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Sequence</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>0</th>\n",
-       "      <th></th>\n",
+       "      <th>Sequence</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>AC_000192.1</td>\n",
-       "      <td>(T, A, T, A, A, G, A, G, T, G, A, T, T, G, G, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>AF095702.1</td>\n",
-       "      <td>(A, T, G, T, T, G, G, T, G, A, A, G, T, C, A, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>AF220295.1</td>\n",
-       "      <td>(G, A, T, T, G, T, G, A, G, C, G, A, T, T, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>AF353511.1</td>\n",
-       "      <td>(A, C, T, T, A, A, A, A, A, G, A, T, T, T, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>AF391541.1</td>\n",
-       "      <td>(G, A, T, T, G, C, G, A, G, C, G, A, T, T, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>MT831673.1</td>\n",
-       "      <td>(T, A, A, A, G, G, T, T, T, A, T, A, C, C, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>MT831674.1</td>\n",
-       "      <td>(T, A, A, A, G, G, T, T, T, A, T, A, C, C, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>MT831675.1</td>\n",
-       "      <td>(T, T, A, A, A, G, G, T, T, T, A, T, A, C, C, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>MT831676.1</td>\n",
-       "      <td>(T, A, T, A, C, C, T, T, C, C, C, A, G, G, T, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>MT831677.1</td>\n",
-       "      <td>(T, A, T, A, C, C, T, T, C, C, C, A, G, G, T, ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>this_is_a_test</td>\n",
+       "      <td>(g, a, a, c, a, a, c, c, t, a, c, t, a, g, t, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>12487 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                      Sequence\n",
-       "0                                                             \n",
-       "AC_000192.1  (T, A, T, A, A, G, A, G, T, G, A, T, T, G, G, ...\n",
-       "AF095702.1   (A, T, G, T, T, G, G, T, G, A, A, G, T, C, A, ...\n",
-       "AF220295.1   (G, A, T, T, G, T, G, A, G, C, G, A, T, T, T, ...\n",
-       "AF353511.1   (A, C, T, T, A, A, A, A, A, G, A, T, T, T, T, ...\n",
-       "AF391541.1   (G, A, T, T, G, C, G, A, G, C, G, A, T, T, T, ...\n",
-       "...                                                        ...\n",
-       "MT831673.1   (T, A, A, A, G, G, T, T, T, A, T, A, C, C, T, ...\n",
-       "MT831674.1   (T, A, A, A, G, G, T, T, T, A, T, A, C, C, T, ...\n",
-       "MT831675.1   (T, T, A, A, A, G, G, T, T, T, A, T, A, C, C, ...\n",
-       "MT831676.1   (T, A, T, A, C, C, T, T, C, C, C, A, G, G, T, ...\n",
-       "MT831677.1   (T, A, T, A, C, C, T, T, C, C, C, A, G, G, T, ...\n",
-       "\n",
-       "[12487 rows x 1 columns]"
+       "                0                                           Sequence\n",
+       "0  this_is_a_test  (g, a, a, c, a, a, c, c, t, a, c, t, a, g, t, ..."
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "genomes"
+    "FastaReader('./test.txt')\n",
+    "#genomes"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1) Try numpy conversion"
+    "## 1) Numpy conversion - Generating Dummies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "genomesplit = pd.DataFrame(genomes['Sequence'].apply(lambda x: list(x)))\n",
-    "genomesplit = pd.DataFrame(genomesplit['Sequence'].to_list())\n",
-    "genomesplit[~genomesplit.isin(atcg)] = None\n",
-    "genomesplit.index = genomes.index"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Replacing Nucleotides with dummy values:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,15 +133,19 @@
      "output_type": "stream",
      "text": [
       "non-nucleotides replaced...\n",
-      "A replaced\n",
-      "T replaced\n",
-      "C replaced\n",
-      "G replaced\n"
+      "A replaced with 0\n",
+      "T replaced with 1\n",
+      "C replaced with 2\n",
+      "G replaced with 3\n"
      ]
     }
    ],
    "source": [
     "atcg = [\"A\", \"T\", \"C\", \"G\"]\n",
+    "genomesplit = pd.DataFrame(genomes['Sequence'].apply(lambda x: list(x)))\n",
+    "genomesplit = pd.DataFrame(genomesplit['Sequence'].to_list())\n",
+    "genomesplit[~genomesplit.isin(atcg)] = None\n",
+    "genomesplit.index = genomes.index\n",
     "dummygenes = genomesplit.fillna(0)\n",
     "print('non-nucleotides replaced...')\n",
     "for n in range(0, len(atcg)):\n",
@@ -226,12 +157,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- Replacing Nucleotides with dummy values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummygenes.to_csv('./dummygenes.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2) Create aligner function"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -248,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -318,7 +265,7 @@
        "NC_048213.1  0.000000"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,42 +356,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from scipy.cluster.hierarchy import dendrogram, ward\n",
-    "# Apply the ward clustering to the data array X1\n",
-    "# The SciPy ward function returns an array that specifies the distances\n",
-    "# bridged when performing agglomerative clustering\n",
-    "\n",
-    "linkage_array = ward(dummygenes[0::])\n",
-    "print(\"Shape: \", linkage_array.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "# Plot the dendrogram depicting evolutionary distance:\n",
-    "dendrogram(linkage_array)\n",
-    "plt.xlabel(\"Sample index\")\n",
-    "plt.ylabel(\"Cluster distance\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dendrogram(linkage_array, p = 10, truncate_mode = 'level')\n",
-    "plt.xlabel(\"Sample index\")\n",
-    "plt.ylabel(\"Cluster distance\")"
+    "## -Moved to clustering.ipynb"
    ]
   },
   {
